# implore

./: Cargo.toml
src/: lib.rs
tests/: assign.rs  bad_impls.rs  bad_options.rs  binary.rs  commutative.rs  deref.rs  failures.rs  index.rs  lifetimes.rs  unary.rs
tests/fail/: autoref_on_deref.rs  autoref_on_deref.stderr  commutative_on_index.rs  commutative_on_index.stderr  mut_on_deref.rs  mut_on_deref.stderr  mut_on_index.rs  mut_on_index.stderr  no_mut_on_assign.rs  no_mut_on_assign.stderr  no_mut_on_deref_mut.rs  no_mut_on_deref_mut.stderr  no_mut_on_index_mut.rs  no_mut_on_index_mut.stderr  no_ref_on_deref.rs  no_ref_on_deref.stderr  no_ref_on_index.rs  no_ref_on_index.stderr  no_return_on_deref.rs  no_return_on_deref.stderr  non_ref_return_on_deref.rs  non_ref_return_on_deref.stderr  partial_autoref_assign.rs  partial_autoref_assign.stderr  partial_autoref_binary.rs  partial_autoref_binary.stderr  partial_autoref_commutative.rs  partial_autoref_commutative.stderr  partial_autoref_unary.rs  partial_autoref_unary.stderr  repeat_option_1.rs  repeat_option_1.stderr  repeat_option_2.rs  repeat_option_2.stderr  unknown_option.rs  unknown_option.stderr  unknown_trait.rs  unknown_trait.stderr  unparsable_option.rs  unparsable_option.stderr  (+2 more)
tests/warn/: useless_autoref.rs  useless_autoref.stderr
