[package]
name = "implore"
version = "0.1.0"
authors = ["Nathan Wiebe Neufeldt <wn.nathan@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
trybuild = "1.0"
